--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel ="shorcut icon" href="favicon.gif">
 	</head>
 	<body bgcolor ="#98f5ff" background= "photography.png">
-		<h3>THÔNG TIN CÁ NHÂN</h3>
+		<h3 align="center">THÔNG TIN CÁ NHÂN</h3>
 		<hr color ="blue" size ="3">
 		<img src = "no_avatar.png" width ="165" align = "left">
 		<p>Họ và tên:<b>Nguyễn Nhơn Hòa</b></p>
